--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "license": "MIT",
   "dependencies": {
     "chalk": "^3.0.0",
+    "cross-env": "^6.0.3",
+    "mocha": "^6.2.2",
     "readline-sync": "^1.4.10",
     "sequelize": "^5.21.2",
     "sqlite3": "^4.1.0"
+  },
+  "scripts": {
+    "test": "cross-env NODE_ENV=testing mocha"
   }
 }
