Added possible improvements section

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "sqlite3": "^4.1.0"
   },
   "scripts": {
+    "start": "node index.js",
     "test": "cross-env NODE_ENV=testing mocha"
   }
 }
